Bug 472467 - SMB4K Crash saving bookmarks
Summary: SMB4K Crash saving bookmarks
Status: RESOLVED FIXED
Alias: None
Product: Smb4k
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Alexander Reinholdt
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2023-07-21 15:18 UTC by Karl Mulder
Modified: 2023-10-06 18:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-3982966-0.html (2.22 KB, text/html)
2023-07-27 13:13 UTC, Karl Mulder
Details
New crash information added by DrKonqi (4.38 KB, text/plain)
2023-07-27 14:05 UTC, Karl Mulder
Details
attachment-3989848-0.html (2.71 KB, text/html)
2023-07-27 14:21 UTC, Karl Mulder
Details
New crash information added by DrKonqi (4.33 KB, text/plain)
2023-10-06 18:25 UTC, Mike
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Mulder 2023-07-21 15:18:35 UTC
Application: smb4k (3.1.90)

Qt Version: 5.15.8
Frameworks Version: 5.104.0
Operating System: Linux 6.2.0-25-generic x86_64
Windowing System: X11
Distribution: Ubuntu 23.04
DrKonqi: 5.27.4 [KCrashBackend]

-- Information about the crash:
After upgrading kubuntu to 23.04, the smb4k bookmarks were not displaying normal.  The individual items were not being placed in category folders.  Only the first item in the category was in the category folder, the rest were displayed in sequence after the category folder.  I opened the bookmark editor and removed the category from all the items in one category.  I then went back into each of those items and gave them a new category name of "a".  I clicked ok which closed the bookmark editor, and i believe it was at that point that SMB4K crashed.  When i restarted the app, the 4 items that I had removed categories for, all showed up withour a category (they did not show up with the "a" category.

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: Smb4K (smb4k), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f0d33165ef4 in QAction::menu() const () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#5  0x00007f0d3385e4bd in KActionMenu::removeAction(QAction*) () from /lib/x86_64-linux-gnu/libKF5WidgetsAddons.so.5
#6  0x0000563c2a730e69 in ?? ()
#7  0x00007f0d324f39dc in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f0d33e46479 in Smb4KBookmarkHandler::bookmarkRemoved(QSharedPointer<Smb4KBookmark> const&) () from /lib/x86_64-linux-gnu/libsmb4kcore.so
#9  0x00007f0d33e4d00a in Smb4KBookmarkHandler::removeBookmark(QSharedPointer<Smb4KBookmark> const&) () from /lib/x86_64-linux-gnu/libsmb4kcore.so
#10 0x00007f0d33e4d527 in Smb4KBookmarkHandler::addBookmarks(QList<QSharedPointer<Smb4KBookmark> > const&, bool) () from /lib/x86_64-linux-gnu/libsmb4kcore.so
#11 0x00007f0d33e56dd3 in Smb4KBookmarkHandler::editBookmarks() () from /lib/x86_64-linux-gnu/libsmb4kcore.so
#12 0x00007f0d324f39dc in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#13 0x00007f0d33165546 in QAction::triggered(bool) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#14 0x00007f0d33168203 in QAction::activate(QAction::ActionEvent) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#15 0x00007f0d332f1342 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#16 0x00007f0d332f924c in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#17 0x00007f0d331aec28 in QWidget::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#18 0x00007f0d3316bf92 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#19 0x00007f0d33174612 in QApplication::notify(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#20 0x00007f0d324bae38 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#21 0x00007f0d33172712 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#22 0x00007f0d331c8625 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#23 0x00007f0d331cb590 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#24 0x00007f0d3316bf92 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#25 0x00007f0d324bae38 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#26 0x00007f0d3294240d in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#27 0x00007f0d329164bc in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#28 0x00007f0d2bcfa54e in ?? () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#29 0x00007f0d30a6149d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007f0d30abc178 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007f0d30a601b0 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#32 0x00007f0d32514e7a in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#33 0x00007f0d324b97cb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#34 0x00007f0d324c1c1a in QCoreApplication::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#35 0x0000563c2a72d184 in ?? ()
#36 0x00007f0d31a23a90 in __libc_start_call_main (main=main@entry=0x563c2a72c3e0, argc=argc@entry=1, argv=argv@entry=0x7fff8a398ef8) at ../sysdeps/nptl/libc_start_call_main.h:58
#37 0x00007f0d31a23b49 in __libc_start_main_impl (main=0x563c2a72c3e0, argc=1, argv=0x7fff8a398ef8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff8a398ee8) at ../csu/libc-start.c:360
#38 0x0000563c2a72d9e5 in ?? ()
[Inferior 1 (process 2472) detached]

Reported using DrKonqi
Comment 1 Karl Mulder 2023-07-24 16:32:34 UTC
Today, a co-worker tried using the Edit Bookmarks option and upon saving, he also had a crash.  After the crash the only entry in the bookmarks.xml file, was the one entry that he had "changed".  All of the other bookmarks were gone.  My  bookmark file has more than 80 entries.
Comment 2 Alexander Reinholdt 2023-07-27 12:37:54 UTC
Thank you for reporting this issue and please excuse my late response. Right now my time is limited to work on Smb4K and follow the bug tracker.

I will try to reproduce the bug and come up with a fix. Meanwhile, if possible, could you please try the latest version (3.2.1) of Smb4K and check if the problem is present there as well? To avoid data loss (I am very sorry for the data loss that happened to your co-worker!), please back up the file  ~/.local/share/smb4k/bookmarks.xml before doing the tests.
Comment 3 Alexander Reinholdt 2023-07-27 12:40:20 UTC
(In reply to Alexander Reinholdt from comment #2)
> Thank you for reporting this issue and please excuse my late response. Right
> now my time is limited to work on Smb4K and follow the bug tracker.
> 
> I will try to reproduce the bug and come up with a fix. Meanwhile, if
> possible, could you please try the latest version (3.2.1) of Smb4K and check
> if the problem is present there as well? To avoid data loss (I am very sorry
> for the data loss that happened to your co-worker!), please back up the file
> ~/.local/share/smb4k/bookmarks.xml before doing the tests.

You can download the latest version from here (it also includes WS Discovery Support): https://software.opensuse.org//download.html?project=home%3Aareinholdt&package=smb4k
Comment 4 Karl Mulder 2023-07-27 13:13:13 UTC
Created attachment 160564 [details]
attachment-3982966-0.html

Alexander,

Thank you very much contacting me.  I am a system administrator for
Northern Michigan University and fully understand having more work than
hours in a day.

I will try getting the new version and testing with that.

I had delayed updating my kubuntu release, because of the issues of how the
bookmarks display in the the 3.1.90 version of smb4k.  It will be
interesting to see if 3.2.1 fixes that issue as well.

Thanks again

On Thu, Jul 27, 2023 at 8:40 AM Alexander Reinholdt <
bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=472467
>
> --- Comment #3 from Alexander Reinholdt <alexander.reinholdt@kdemail.net>
> ---
> (In reply to Alexander Reinholdt from comment #2)
> > Thank you for reporting this issue and please excuse my late response.
> Right
> > now my time is limited to work on Smb4K and follow the bug tracker.
> >
> > I will try to reproduce the bug and come up with a fix. Meanwhile, if
> > possible, could you please try the latest version (3.2.1) of Smb4K and
> check
> > if the problem is present there as well? To avoid data loss (I am very
> sorry
> > for the data loss that happened to your co-worker!), please back up the
> file
> > ~/.local/share/smb4k/bookmarks.xml before doing the tests.
>
> You can download the latest version from here (it also includes WS
> Discovery
> Support):
>
> https://software.opensuse.org//download.html?project=home%3Aareinholdt&package=smb4k
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 5 Karl Mulder 2023-07-27 14:05:50 UTC
Created attachment 160566 [details]
New crash information added by DrKonqi

smb4k (3.2.1) using Qt 5.15.8

I installed the new 3.2.1 version of smb4k, and it still crashes. I used the directions on the software.opensuse.org areinholdt project page to install the XUbunutu 23.04 version.  Install went well, but still crashes.

-- Backtrace (Reduced):
#4  0x00007fd630965ef4 in QAction::menu() const () at /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#5  0x00007fd6311544bd in KActionMenu::removeAction(QAction*) () at /lib/x86_64-linux-gnu/libKF5WidgetsAddons.so.5
[...]
#8  0x00007fd63173d9f9 in Smb4KBookmarkHandler::bookmarkRemoved(QSharedPointer<Smb4KBookmark> const&) () at /lib/x86_64-linux-gnu/libsmb4kcore.so
#9  0x00007fd63174490a in Smb4KBookmarkHandler::removeBookmark(QSharedPointer<Smb4KBookmark> const&) () at /lib/x86_64-linux-gnu/libsmb4kcore.so
#10 0x00007fd63174509a in Smb4KBookmarkHandler::addBookmarks(QList<QSharedPointer<Smb4KBookmark> > const&, bool) () at /lib/x86_64-linux-gnu/libsmb4kcore.so
Comment 6 Karl Mulder 2023-07-27 14:21:05 UTC
Created attachment 160567 [details]
attachment-3989848-0.html

Alexander,

I used the software repository from your link. I selected Ubuntu and
chose the  *Add repository and install manually *option.
Install went fine, but when i repeated the test it crashed again.  I did go
through the kde crash reporter again.

Process i went through

   1. clicked Bookmarks
   2. clicked Edit Bookmarks
   3. highlighted a bookmark item
   4. changed the Category field
   5. Scrolled down the tree view
   6. selected another bookmark item and again changed the Category
   7. scrolled down the tree view, and changed a third Category field
   8. Clicked OK
   9. crashed

Before the crash the bookmark file contained 465 lines, after 129 lines. (
and yes i did backups ;-)

I just reopened the smb4k app, went into Bookmarks, Edit, and clicked OK
without modification. No crash.

I will reboot my system and try again, after a full os reboot.

On Thu, Jul 27, 2023 at 8:40 AM Alexander Reinholdt <
bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=472467
>
> --- Comment #3 from Alexander Reinholdt <alexander.reinholdt@kdemail.net>
> ---
> (In reply to Alexander Reinholdt from comment #2)
> > Thank you for reporting this issue and please excuse my late response.
> Right
> > now my time is limited to work on Smb4K and follow the bug tracker.
> >
> > I will try to reproduce the bug and come up with a fix. Meanwhile, if
> > possible, could you please try the latest version (3.2.1) of Smb4K and
> check
> > if the problem is present there as well? To avoid data loss (I am very
> sorry
> > for the data loss that happened to your co-worker!), please back up the
> file
> > ~/.local/share/smb4k/bookmarks.xml before doing the tests.
>
> You can download the latest version from here (it also includes WS
> Discovery
> Support):
>
> https://software.opensuse.org//download.html?project=home%3Aareinholdt&package=smb4k
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 7 Alexander Reinholdt 2023-07-27 19:23:17 UTC
I found the place where the crash happens. It's in the bookmark menu. At the moment I am investigating why it happens. I hope I can come up with a fix soon.
Comment 8 Alexander Reinholdt 2023-07-28 05:09:53 UTC
Git commit 5d43e3e8adb545651325dff7b77b5dee992a1a9f by Alexander Reinholdt.
Committed on 28/07/2023 at 07:06.
Pushed by areinholdt into branch '3.2'.

Fix crash in the bookmark menu and remove unnecessary/dysfunctional code.

M  +1    -89   smb4k/smb4kbookmarkmenu.cpp
M  +0    -15   smb4k/smb4kbookmarkmenu.h

https://invent.kde.org/network/smb4k/-/commit/5d43e3e8adb545651325dff7b77b5dee992a1a9f
Comment 9 Mike 2023-10-06 18:25:42 UTC
Created attachment 162129 [details]
New crash information added by DrKonqi

smb4k (3.1.90) using Qt 5.15.8

Bookmarks -> Edit Bookmarks -> Select Bookmark -> Change Category to "Backup" -> Application crashes

-- Backtrace (Reduced):
#4  0x00007eff2bd65ef4 in QAction::menu() const () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#5  0x00007eff2c5284bd in KActionMenu::removeAction(QAction*) () from /lib/x86_64-linux-gnu/libKF5WidgetsAddons.so.5
[...]
#8  0x00007eff2cb10479 in Smb4KBookmarkHandler::bookmarkRemoved(QSharedPointer<Smb4KBookmark> const&) () from /lib/x86_64-linux-gnu/libsmb4kcore.so
#9  0x00007eff2cb1700a in Smb4KBookmarkHandler::removeBookmark(QSharedPointer<Smb4KBookmark> const&) () from /lib/x86_64-linux-gnu/libsmb4kcore.so
#10 0x00007eff2cb17527 in Smb4KBookmarkHandler::addBookmarks(QList<QSharedPointer<Smb4KBookmark> > const&, bool) () from /lib/x86_64-linux-gnu/libsmb4kcore.so