Fix crash in the bookmark menu and remove unnecessary/dysfunctional code.

BUG: 472467